Removing URL parameters from storage key for steam

--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -39,7 +39,7 @@ cache_effective_user squid
 
 collapsed_forwarding on
 
-visible_hostname "datahaven"
+visible_hostname "cache"
 
 logfile_rotate 3
 access_log daemon:/var/log/squid/access.log servers_direct
