Added WoT, new Planetside URL

--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -16,10 +16,12 @@ acl servers_direct dstdomain akamai.steamstatic.com
 acl servers_direct dstdomain content-origin.steampowered.com
 acl servers_direct dstdomain client-download.steampowered.com
 acl servers_direct dstdomain pls.patch.station.sony.com
+acl servers_direct dstdomain pls.patch.daybreakgames.com
 acl servers_direct dstdomain .patcher.elderscrollsonline.com
 acl servers_direct dstdomain content.warframe.com
 acl servers_direct dstdomain origin.warframe.com
 # acl servers_direct dstdomain .download.windowsupdate.com
+acl servers_direct dstdomain dl-wot-gc.wargaming.net
 
 cache allow servers_direct
 cache allow servers_rewrite
