Cache range requests

--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -40,6 +40,7 @@ cache_dir ufs /storagepool/squid 102400 16 256
 cache_effective_user squid
 
 collapsed_forwarding on
+range_offset_limit -1
 
 visible_hostname "cache"
 
