--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -22,6 +22,8 @@ acl servers_direct dstdomain content.warframe.com
 acl servers_direct dstdomain origin.warframe.com
 # acl servers_direct dstdomain .download.windowsupdate.com
 acl servers_direct dstdomain dl-wot-gc.wargaming.net
+acl servers_direct dstdomain blzddist1-a.akamaihd.net
+acl servers_direct dstdomain blzddist2-a.akamaihd.net
 
 cache allow servers_direct
 cache allow servers_rewrite
@@ -63,6 +65,7 @@ request_header_access HTTP_X_LOG_7527 deny all
 #refresh_pattern ^ftp:		1440	20%	10080
 #refresh_pattern ^gopher:	1440	0%	1440
 #refresh_pattern -i (/cgi-bin/|\?) 0	0%	0
+refresh_pattern patcher\.elderscrollsonline\.com	0	20%	4320	ignore-no-store ignore-reload
 refresh_pattern .		0	20%	4320
 
 # Specify what program to pipe URL through
