Removing ESO for now, Squid lacks true support for range D/Ls

--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -9,7 +9,6 @@ acl servers_rewrite dstdomain content6.steampowered.com
 acl servers_rewrite dstdomain content7.steampowered.com
 acl servers_rewrite dstdomain content8.steampowered.com
 
-
 acl servers_direct dstdomain .s.steampowered.com
 acl servers_direct dstdomain hsar.steampowered.com.edgesuite.net
 acl servers_direct dstdomain akamai.steamstatic.com
@@ -17,10 +16,9 @@ acl servers_direct dstdomain content-origin.steampowered.com
 acl servers_direct dstdomain client-download.steampowered.com
 acl servers_direct dstdomain pls.patch.station.sony.com
 acl servers_direct dstdomain pls.patch.daybreakgames.com
-acl servers_direct dstdomain .patcher.elderscrollsonline.com
+#acl servers_direct dstdomain .patcher.elderscrollsonline.com
 acl servers_direct dstdomain content.warframe.com
 acl servers_direct dstdomain origin.warframe.com
-# acl servers_direct dstdomain .download.windowsupdate.com
 acl servers_direct dstdomain dl-wot-gc.wargaming.net
 acl servers_direct dstdomain blzddist1-a.akamaihd.net
 acl servers_direct dstdomain blzddist2-a.akamaihd.net
@@ -65,7 +63,7 @@ request_header_access HTTP_X_LOG_7527 deny all
 #refresh_pattern ^ftp:		1440	20%	10080
 #refresh_pattern ^gopher:	1440	0%	1440
 #refresh_pattern -i (/cgi-bin/|\?) 0	0%	0
-refresh_pattern patcher\.elderscrollsonline\.com	0	20%	4320	ignore-no-store ignore-reload
+refresh_pattern patcher\.elderscrollsonline\.com	0	20%	525600	ignore-reload
 refresh_pattern .		0	20%	4320
 
 # Specify what program to pipe URL through
