--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,39 +1,70 @@
-
-
-
-events {
+events 
+{
     worker_connections  1024;
 }
 
 
-http {
- proxy_cache_path /tmp/mycache keys_zone=mycache:10m;
-  #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+http 
+{
+	proxy_cache_path /tmp/mycache keys_zone=mycache:10m;
 
-log_format nginx_cache '$remote_addr - $upstream_cache_status [$time_local]';
-    access_log  /var/log/nginx-access.log;
-    error_log  /var/log/nginx-error.log;
+	log_format nginx_cache '$upstream_cache_status: $remote_addr - [$time_local] uri:'
+				'"$request" $status';
+	access_log  /var/log/nginx-access.log nginx_cache;
+	error_log  /var/log/nginx-error.log;
 
-    sendfile        on;
-    #tcp_nopush     on;
-    resolver 213.73.91.35;
+	sendfile        on;
+	#tcp_nopush     on;
+	resolver 213.73.91.35; 
 
-	server {
-		listen 3129;
-            proxy_cache mycache;
-access_log /var/log/nginx-cache.log nginx_cache;
-                proxy_cache_key    "$server_name$uri$slice_range";
-                slice              1m;
+        server
+        {
+                server_name client-download.steampowered.com;
+                listen 3129;
+		proxy_cache_key    "$server_name$uri$slice_range";
+		slice              1m;
                 proxy_set_header   Range $slice_range;
                 proxy_http_version 1.1;
-                proxy_cache_valid  200 206 1h;
 
-		location / {
-				proxy_pass      $scheme://$host$request_uri;
+                proxy_cache_valid  200 206 100d;
+                location /
+                {
+                        proxy_cache mycache;
+
+                        proxy_pass      $scheme://$host$request_uri;
+
+                }
+        }
+
+	server 
+	{
+		server_name ~^valve\d+\.steamcontent\.com;
+		listen 3129;
+		#proxy_cache_key    "$server_name$uri$slice_range";
+		#slice              1m;
+		#proxy_set_header   Range $slice_range;
+		proxy_cache_key    "valveX.steamcontent.com$uri";
+		proxy_http_version 1.1;
+
+		proxy_cache_valid  200 206 100d;
+		location / 
+		{
+			proxy_cache mycache;
+
+			proxy_pass      $scheme://$host$request_uri;
 
 		}
 	}
+
+ 	server
+	{
+                listen 3129 default_server;
+		access_log off;
+                location /
+		{
+			proxy_pass      $scheme://$host$request_uri;
+
+                }
+        }
 }
 
