--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,9 +6,13 @@ events
 
 http 
 {
-	proxy_cache_path /tmp/mycache keys_zone=mycache:10m;
-
-	log_format nginx_cache '$upstream_cache_status: $remote_addr - [$time_local] uri:'
+	proxy_cache_path /storagepool/cache keys_zone=steamcache:100m max_size=100g inactive=365d levels=1:2;
+	proxy_cache_revalidate on;
+	proxy_cache_lock on;
+        proxy_http_version 1.1;
+        proxy_cache_valid  200 206 100d;
+	
+	log_format nginx_cache '[$time_local] $upstream_cache_status: $remote_addr -'
 				'"$request" $status';
 	access_log  /var/log/nginx-access.log nginx_cache;
 	error_log  /var/log/nginx-error.log;
@@ -24,12 +28,10 @@ http
 		proxy_cache_key    "$server_name$uri$slice_range";
 		slice              1m;
                 proxy_set_header   Range $slice_range;
-                proxy_http_version 1.1;
 
-                proxy_cache_valid  200 206 100d;
                 location /
                 {
-                        proxy_cache mycache;
+                        proxy_cache steamcache;
 
                         proxy_pass      $scheme://$host$request_uri;
 
@@ -44,12 +46,10 @@ http
 		#slice              1m;
 		#proxy_set_header   Range $slice_range;
 		proxy_cache_key    "valveX.steamcontent.com$uri";
-		proxy_http_version 1.1;
 
-		proxy_cache_valid  200 206 100d;
 		location / 
 		{
-			proxy_cache mycache;
+			proxy_cache steamcache;
 
 			proxy_pass      $scheme://$host$request_uri;
 
