Use non-priviledged user, don't use temp files, logging params, more resolvers

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,5 @@
+user www;
+
 events 
 {
     worker_connections  1024;
@@ -6,22 +8,30 @@ events
 
 http 
 {
-	proxy_cache_path /storagepool/cache keys_zone=steamcache:100m max_size=100g inactive=365d levels=1:2;
+	proxy_cache_path /storagepool/cache use_temp_path=off keys_zone=steamcache:100m max_size=100g inactive=365d levels=1:2;
 	proxy_cache_revalidate on;
 	proxy_cache_lock on;
         proxy_http_version 1.1;
         proxy_cache_valid  200 206 100d;
 	
-	log_format nginx_cache '[$time_local] $upstream_cache_status: $remote_addr -'
-				'"$request" $status';
-	access_log  /var/log/nginx-access.log nginx_cache;
-	error_log  /var/log/nginx-error.log;
+	log_format nginx_cache '$upstream_cache_status: $remote_addr - $remote_user [$time_local] '
+				'"$request_method $host$request_uri" $status $body_bytes_sent';
+
+	log_format full '$remote_addr - $remote_user [$time_local] '
+                    '"$request_method $host$request_uri" $status $body_bytes_sent '
+                    '"$http_referer" "$http_user_agent"';
+
+	access_log	/var/log/nginx/access.log nginx_cache;
+	error_log	/var/log/nginx/error.log;
 
 	sendfile        on;
 	#tcp_nopush     on;
-	resolver 213.73.91.35; 
 
-        server
+
+	resolver 213.73.91.35 85.214.20.141 85.214.73.63 130.255.73.90; 
+
+        # All servers which do not require any shenanigans
+	server
         {
                 server_name client-download.steampowered.com;
                 listen 3129;
@@ -58,8 +68,10 @@ http
 
  	server
 	{
-                listen 3129 default_server;
-		access_log off;
+                listen		3129 default_server;
+		#access_log	/var/log/nginx/access.log-nocache full;
+		access_log 	off;
+
                 location /
 		{
 			proxy_pass      $scheme://$host$request_uri;
