--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,6 +13,10 @@ http
 	proxy_cache_lock on;
         proxy_http_version 1.1;
         proxy_cache_valid  200 206 100d;
+
+	proxy_cache_key $host$uri$is_args$args$slice_range;
+	slice 1m;
+	proxy_set_header   Range $slice_range;
 	
 	log_format nginx_cache '$upstream_cache_status: $remote_addr - $remote_user [$time_local] '
 				'"$request_method $host$request_uri" $status $body_bytes_sent';
@@ -35,9 +39,25 @@ http
         {
                 server_name client-download.steampowered.com;
                 listen 3129;
-		proxy_cache_key    "$server_name$uri$slice_range";
-		slice              1m;
-                proxy_set_header   Range $slice_range;
+
+                location /
+                {
+                        proxy_cache steamcache;
+
+                        proxy_pass      $scheme://$host$request_uri;
+
+                }
+        }
+	
+	# Steam uses subdomains like valve123 and valve456 serving identical files. Also includes some arguments in the URI which break caching
+        server
+        {
+                server_name     ~^valve\d+\.steamcontent\.com;
+                listen          3129;
+
+                #steam already  serves neat little chunks
+                slice           0;
+                proxy_cache_key "valveX.steamcontent.com$uri";
 
                 location /
                 {
@@ -48,23 +68,7 @@ http
                 }
         }
 
-	server 
-	{
-		server_name ~^valve\d+\.steamcontent\.com;
-		listen 3129;
-		#proxy_cache_key    "$server_name$uri$slice_range";
-		#slice              1m;
-		#proxy_set_header   Range $slice_range;
-		proxy_cache_key    "valveX.steamcontent.com$uri";
 
-		location / 
-		{
-			proxy_cache steamcache;
-
-			proxy_pass      $scheme://$host$request_uri;
-
-		}
-	}
 
  	server
 	{
