Adding Blizzard, ESO, War Thunder, and nginx status page

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,7 +37,7 @@ http
         # All servers which do not require any shenanigans
 	server
         {
-                server_name client-download.steampowered.com;
+                server_name client-download.steampowered.com pls.patch.station.sony.com pls.patch.daybreakgames.com content.warframe.com cdn.akamai.steamstatic.com level3.blizzard.com;
                 listen 3129;
 
                 location /
@@ -68,6 +68,68 @@ http
                 }
         }
 
+
+        server
+        {
+                server_name     ~^blzddist[1-9]-a\.akamaihd\.net;
+                listen          3129;
+
+                proxy_cache_key blzddistX-a.akamaihd.net$uri$is_args$args$slice_range;
+
+                location /
+                {
+                        proxy_cache steamcache;
+
+                        proxy_pass      $scheme://$host$request_uri;
+
+                }
+        }
+
+	# ESO sends no-cache headers for no good reason
+        server
+        {
+                server_name     *.patcher.elderscrollsonline.com;
+                listen          3129;
+
+		proxy_ignore_headers Cache-Control;
+                
+		location /
+                {
+                        proxy_cache steamcache;
+
+                        proxy_pass      $scheme://$host$request_uri;
+
+                }
+        }
+	
+	#War Thunder
+	server
+        {
+                server_name     ~^gaijin\.s-\d+\.clients\.cdnnow\.ru;
+                listen          3129;
+
+                proxy_cache_key  gaijin.s-X.clients.cdnnow.ru$uri$is_args$args$slice_range;
+
+                location /
+                {
+                        proxy_cache steamcache;
+
+                        proxy_pass      $scheme://$host$request_uri;
+
+                }
+        }
+
+
+
+        server
+        {
+                listen 3130;
+                location /nginx_status
+                {
+                        stub_status on;
+                }
+
+        }
 
 
  	server
