Disable slicing for passthrough, not all servers support it

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -137,7 +137,7 @@ http
                 listen		3129 default_server;
 		#access_log	/var/log/nginx/access.log-nocache full;
 		access_log 	off;
-
+		slice		0;	
                 location /
 		{
 			proxy_pass      $scheme://$host$request_uri;
