--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,5 @@
 user www;
+worker_processes auto;
 
 events 
 {
@@ -13,6 +14,11 @@ http
 	proxy_cache_lock on;
         proxy_http_version 1.1;
         proxy_cache_valid  200 206 100d;
+
+	proxy_buffering	off;
+	proxy_request_buffering off;
+	proxy_max_temp_file_size 0;
+
 
 	proxy_cache_key $host$uri$is_args$args$slice_range;
 	slice 1m;
@@ -30,7 +36,7 @@ http
 
 	sendfile        on;
 	#tcp_nopush     on;
-
+	aio		on;
 
 	resolver 213.73.91.35 85.214.20.141 85.214.73.63 130.255.73.90; 
 
@@ -137,7 +143,7 @@ http
                 listen		3129 default_server;
 		#access_log	/var/log/nginx/access.log-nocache full;
 		access_log 	off;
-		slice		0;	
+		slice		0;
                 location /
 		{
 			proxy_pass      $scheme://$host$request_uri;
