media[1-9].steampowered.com

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -43,15 +43,18 @@ http
         # All servers which do not require any shenanigans
 	server
         {
-                server_name client-download.steampowered.com pls.patch.station.sony.com pls.patch.daybreakgames.com content.warframe.com cdn.akamai.steamstatic.com level3.blizzard.com;
+                server_name 	client-download.steampowered.com
+				pls.patch.station.sony.com
+				pls.patch.daybreakgames.com
+				content.warframe.com
+				level3.blizzard.com
                 listen 3129;
 
                 location /
                 {
                         proxy_cache steamcache;
 
-                        proxy_pass      $scheme://$host$request_uri;
-
+			proxy_pass      http://$host$request_uri;
                 }
         }
 	
@@ -63,18 +66,32 @@ http
 
                 #steam already  serves neat little chunks
                 slice           0;
-                proxy_cache_key "valveX.steamcontent.com$uri";
+                proxy_cache_key valveX.steamcontent.com$uri;
 
                 location /
                 {
                         proxy_cache steamcache;
 
-                        proxy_pass      $scheme://$host$request_uri;
+                        proxy_pass      http://$host$request_uri;
 
                 }
         }
+        server
+        {
+                server_name     ~^media[1-9].steampowered.com;
+                listen          3129;
 
+                proxy_cache_key mediaX.steampowered.com$uri$is_args$args$slice_range;
 
+                location /client
+                {
+                        proxy_cache steamcache;
+
+			proxy_pass      http://$host$request_uri;
+                }
+        }
+
+	# Blizzard
         server
         {
                 server_name     ~^blzddist[1-9]-a\.akamaihd\.net;
@@ -86,8 +103,7 @@ http
                 {
                         proxy_cache steamcache;
 
-                        proxy_pass      $scheme://$host$request_uri;
-
+			proxy_pass      http://$host$request_uri;
                 }
         }
 
@@ -103,8 +119,7 @@ http
                 {
                         proxy_cache steamcache;
 
-                        proxy_pass      $scheme://$host$request_uri;
-
+			proxy_pass      http://$host$request_uri;
                 }
         }
 	
@@ -120,7 +135,9 @@ http
                 {
                         proxy_cache steamcache;
 
-                        proxy_pass      $scheme://$host$request_uri;
+			proxy_pass      http://$host$request_uri;
+                }
+        }
 
                 }
         }
