--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -48,6 +48,8 @@ http
 				pls.patch.daybreakgames.com
 				content.warframe.com
 				level3.blizzard.com
+				rxp-de-frankfuhrt.file-server.download
+				*.renegade-x.com;
                 listen 3129;
 
                 location /
@@ -139,10 +141,38 @@ http
                 }
         }
 
+	#WoT
+        server
+        {
+                server_name     ~^dl-wot-[a-z]+\.wargaming\.net;
+                listen          3129;
+
+                proxy_cache_key  dl-wot-xx.wargaming.net$uri$is_args$args$slice_range;
+
+                location /
+                {
+                        proxy_cache steamcache;
+
+			proxy_pass      http://$host$request_uri;
                 }
         }
 
+ 	#Renegade X
+        server
+        {
+                server_name     cdn.renegade-x.com; 
+                listen          3129;
+		#They don't like slices
+		proxy_http_version	1.0;
+		slice		0;
 
+                location /
+                {
+                        proxy_cache steamcache;
+
+			proxy_pass      http://$host$request_uri;
+                }
+        }
 
         server
         {
