Moving repetitive stuff into includes. Also fixes ranges being overwritten when slicing is off

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,6 +10,7 @@ events
 http 
 {
 	proxy_cache_path /storagepool/cache use_temp_path=off keys_zone=steamcache:100m max_size=100g inactive=365d levels=1:2;
+        proxy_cache steamcache;
 	proxy_cache_revalidate on;
 	proxy_cache_lock on;
         proxy_http_version 1.1;
@@ -18,11 +19,6 @@ http
 	proxy_buffering	off;
 	proxy_request_buffering off;
 	proxy_max_temp_file_size 0;
-
-
-	proxy_cache_key $host$uri$is_args$args$slice_range;
-	slice 1m;
-	proxy_set_header   Range $slice_range;
 	
 	log_format nginx_cache '$upstream_cache_status: $remote_addr - $remote_user [$time_local] '
 				'"$request_method $host$request_uri" $status $body_bytes_sent';
@@ -51,13 +47,10 @@ http
 				rxp-de-frankfuhrt.file-server.download
 				*.renegade-x.com;
                 listen 3129;
+		include includes/slicing;
+		proxy_cache_key $host$uri$is_args$args$slice_range;
 
-                location /
-                {
-                        proxy_cache steamcache;
-
-			proxy_pass      http://$host$request_uri;
-                }
+                include includes/defaultlocation;
         }
 	
 	# Steam uses subdomains like valve123 and valve456 serving identical files. Also includes some arguments in the URI which break caching
@@ -67,31 +60,25 @@ http
                 listen          3129;
 
                 #steam already  serves neat little chunks
-                slice           0;
                 proxy_cache_key valveX.steamcontent.com$uri;
 
-                location /
-                {
-                        proxy_cache steamcache;
-
-                        proxy_pass      http://$host$request_uri;
-
-                }
+                include includes/defaultlocation;
         }
         server
         {
                 server_name     ~^media[1-9].steampowered.com;
                 listen          3129;
 
-                proxy_cache_key mediaX.steampowered.com$uri$is_args$args$slice_range;
-
                 location /client
                 {
-                        proxy_cache steamcache;
-
-			proxy_pass      http://$host$request_uri;
+                	include		includes/slicing;
+                	proxy_cache_key mediaX.steampowered.com$uri$is_args$args$slice_range;
+ 
+                	proxy_pass      http://$host$request_uri;
                 }
-        }
+        	
+		include includes/defaultlocation_nocache;
+	}
 
 	# Blizzard
         server
@@ -99,14 +86,11 @@ http
                 server_name     ~^blzddist[1-9]-a\.akamaihd\.net;
                 listen          3129;
 
+                include includes/slicing;
+
                 proxy_cache_key blzddistX-a.akamaihd.net$uri$is_args$args$slice_range;
 
-                location /
-                {
-                        proxy_cache steamcache;
-
-			proxy_pass      http://$host$request_uri;
-                }
+		include includes/defaultlocation;              
         }
 
 	# ESO sends no-cache headers for no good reason
@@ -115,14 +99,12 @@ http
                 server_name     *.patcher.elderscrollsonline.com;
                 listen          3129;
 
-		proxy_ignore_headers Cache-Control;
-                
-		location /
-                {
-                        proxy_cache steamcache;
+                include includes/slicing;
+		proxy_cache_key $host$uri$is_args$args$slice_range;
 
-			proxy_pass      http://$host$request_uri;
-                }
+		proxy_ignore_headers Cache-Control;
+
+		include includes/defaultlocation; 
         }
 	
 	#War Thunder
@@ -131,14 +113,10 @@ http
                 server_name     ~^gaijin\.s-\d+\.clients\.cdnnow\.ru;
                 listen          3129;
 
-                proxy_cache_key  gaijin.s-X.clients.cdnnow.ru$uri$is_args$args$slice_range;
+                include includes/slicing;                
+		proxy_cache_key  gaijin.s-X.clients.cdnnow.ru$uri$is_args$args$slice_range;
 
-                location /
-                {
-                        proxy_cache steamcache;
-
-			proxy_pass      http://$host$request_uri;
-                }
+                include includes/defaultlocation;
         }
 
 	#WoT
@@ -147,14 +125,10 @@ http
                 server_name     ~^dl-wot-[a-z]+\.wargaming\.net;
                 listen          3129;
 
-                proxy_cache_key  dl-wot-xx.wargaming.net$uri$is_args$args$slice_range;
+                include includes/slicing;                
+		proxy_cache_key  dl-wot-xx.wargaming.net$uri$is_args$args$slice_range;
 
-                location /
-                {
-                        proxy_cache steamcache;
-
-			proxy_pass      http://$host$request_uri;
-                }
+                include includes/defaultlocation;
         }
 
  	#Renegade X
@@ -164,19 +138,14 @@ http
                 listen          3129;
 		#They don't like slices
 		proxy_http_version	1.0;
-		slice		0;
 
-                location /
-                {
-                        proxy_cache steamcache;
-
-			proxy_pass      http://$host$request_uri;
-                }
+                include includes/defaultlocation;
         }
 
         server
         {
-                listen 3130;
+                proxy_cache	off;
+		listen 		3130;
                 location /nginx_status
                 {
                         stub_status on;
@@ -189,13 +158,8 @@ http
 	{
                 listen		3129 default_server;
 		#access_log	/var/log/nginx/access.log-nocache full;
-		access_log 	off;
-		slice		0;
-                location /
-		{
-			proxy_pass      $scheme://$host$request_uri;
-
-                }
+        
+		include includes/defaultlocation_nocache;        
         }
 }
 
