--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,8 +16,6 @@ http
         proxy_http_version 1.1;
         proxy_cache_valid  200 206 100d;
 
-	proxy_buffering	off;
-	proxy_request_buffering off;
 	proxy_max_temp_file_size 0;
 	
 	log_format nginx_cache '$upstream_cache_status: $remote_addr - $remote_user [$time_local] '
@@ -156,8 +154,12 @@ http
 
  	server
 	{
+                proxy_buffering         off;
+                proxy_request_buffering off;
+
                 listen		3129 default_server;
 		#access_log	/var/log/nginx/access.log-nocache full;
+                access_log 	off;
         
 		include includes/defaultlocation_nocache;        
         }
