Added Origin, ET:Legacy (WIP), Dreadnought. Global read permissions for cache files

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,15 +9,16 @@ events
 
 http 
 {
-	proxy_cache_path /storagepool/cache use_temp_path=off keys_zone=steamcache:100m max_size=100g inactive=365d levels=1:2;
+	proxy_cache_path /storagepool/cache use_temp_path=off keys_zone=steamcache:100m max_size=250g inactive=365d levels=1:2;
         proxy_cache steamcache;
 	proxy_cache_revalidate on;
 	proxy_cache_lock on;
         proxy_http_version 1.1;
         proxy_cache_valid  200 206 100d;
-
+	proxy_store_access user:rw group:r all:r;
 	proxy_max_temp_file_size 0;
-	
+
+
 	log_format nginx_cache '$upstream_cache_status: $remote_addr - $remote_user [$time_local] '
 				'"$request_method $host$request_uri" $status $body_bytes_sent';
 
@@ -37,11 +38,12 @@ http
         # All servers which do not require any shenanigans
 	server
         {
-                server_name 	client-download.steampowered.com
+                server_name	client-download.steampowered.com
 				pls.patch.station.sony.com
 				pls.patch.daybreakgames.com
 				content.warframe.com
 				level3.blizzard.com
+				uscloud.6ft.com
 				rxp-de-frankfuhrt.file-server.download
 				*.renegade-x.com;
                 listen 3129;
@@ -140,28 +142,77 @@ http
                 include includes/defaultlocation;
         }
 
+	#ET Legacy
         server
         {
-                proxy_cache	off;
-		listen 		3130;
-                location /nginx_status
+                server_name     wolffiles.de;
+                listen          3129;
+
+                location /filebase
+                {
+        	        include includes/slicing;
+	                proxy_cache_key $host$uri$is_args$args$slice_range;
+
+                        proxy_pass      http://$host$request_uri;
+                }
+		
+		include includes/defaultlocation_nocache;
+	}
+        server
+        {
+                server_name     mirror.etlegacy.com;
+                listen          3129;
+
+
+                location /omnibot
+                {
+                	include includes/slicing;
+                	proxy_cache_key $host$uri$is_args$args$slice_range;
+
+                        proxy_pass      http://$host$request_uri;
+                }
+
+		include includes/defaultlocation_nocache;
+
+        }
+
+
+        # Origin sends no-cache headers for no good reason
+	# Also includes some request params which break caching
+        server
+        {
+                server_name     *.cdn.ea.com;
+                listen          3129;
+
+                proxy_ignore_headers Cache-Control;
+
+		include		includes/slicing;
+                proxy_cache_key $host$uri$slice_range;
+        
+		include		includes/defaultlocation;        
+        }
+
+        server
+        {
+                proxy_cache     off;
+                listen          3130;
+
+		location /nginx_status
                 {
                         stub_status on;
                 }
 
         }
 
-
- 	server
+	server
 	{
-                proxy_buffering         off;
-                proxy_request_buffering off;
+		proxy_buffering		off;
+		proxy_request_buffering	off;
 
-                listen		3129 default_server;
-		#access_log	/var/log/nginx/access.log-nocache full;
-                access_log 	off;
-        
-		include includes/defaultlocation_nocache;        
-        }
-}
-
+		listen          3129 default_server;
+		#access_log     /var/log/nginx/access.log-nocache full;
+		access_log      off;
+	
+		include includes/defaultlocation_nocache;	
+	}
+}	
