Moved individuals sites/CDNs into include files

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,11 +10,11 @@ events
 http 
 {
 	proxy_cache_path /storagepool/cache use_temp_path=off keys_zone=steamcache:100m max_size=250g inactive=365d levels=1:2;
-        proxy_cache steamcache;
+    proxy_cache steamcache;
 	proxy_cache_revalidate on;
 	proxy_cache_lock on;
-        proxy_http_version 1.1;
-        proxy_cache_valid  200 206 100d;
+    proxy_http_version 1.1;
+    proxy_cache_valid  200 206 100d;
 	proxy_store_access user:rw group:r all:r;
 	proxy_max_temp_file_size 0;
 
@@ -35,174 +35,18 @@ http
 
 	resolver 213.73.91.35 85.214.20.141 85.214.73.63 130.255.73.90; 
 
-        # All servers which do not require any shenanigans
-	server
-        {
-                server_name	client-download.steampowered.com
-				pls.patch.station.sony.com
-				pls.patch.daybreakgames.com
-				content.warframe.com
-				level3.blizzard.com
-				uscloud.6ft.com
-				rxp-de-frankfuhrt.file-server.download
-				*.renegade-x.com;
-                listen 3129;
-		include includes/slicing;
-		proxy_cache_key $host$uri$is_args$args$slice_range;
-
-                include includes/defaultlocation;
-        }
+	include sites/*;
 	
-	# Steam uses subdomains like valve123 and valve456 serving identical files. Also includes some arguments in the URI which break caching
-        server
-        {
-                server_name     ~^valve\d+\.steamcontent\.com;
-                listen          3129;
-
-                #steam already  serves neat little chunks
-                proxy_cache_key valveX.steamcontent.com$uri;
-
-                include includes/defaultlocation;
-        }
-        server
-        {
-                server_name     ~^media[1-9].steampowered.com;
-                listen          3129;
-
-                location /client
-                {
-                	include		includes/slicing;
-                	proxy_cache_key mediaX.steampowered.com$uri$is_args$args$slice_range;
- 
-                	proxy_pass      http://$host$request_uri;
-                }
-        	
-		include includes/defaultlocation_nocache;
-	}
-
-	# Blizzard
-        server
-        {
-                server_name     ~^blzddist[1-9]-a\.akamaihd\.net;
-                listen          3129;
-
-                include includes/slicing;
-
-                proxy_cache_key blzddistX-a.akamaihd.net$uri$is_args$args$slice_range;
-
-		include includes/defaultlocation;              
-        }
-
-	# ESO sends no-cache headers for no good reason
-        server
-        {
-                server_name     *.patcher.elderscrollsonline.com;
-                listen          3129;
-
-                include includes/slicing;
-		proxy_cache_key $host$uri$is_args$args$slice_range;
-
-		proxy_ignore_headers Cache-Control;
-
-		include includes/defaultlocation; 
-        }
-	
-	#War Thunder
 	server
-        {
-                server_name     ~^gaijin\.s-\d+\.clients\.cdnnow\.ru;
-                listen          3129;
-
-                include includes/slicing;                
-		proxy_cache_key  gaijin.s-X.clients.cdnnow.ru$uri$is_args$args$slice_range;
-
-                include includes/defaultlocation;
-        }
-
-	#WoT
-        server
-        {
-                server_name     ~^dl-wot-[a-z]+\.wargaming\.net;
-                listen          3129;
-
-                include includes/slicing;                
-		proxy_cache_key  dl-wot-xx.wargaming.net$uri$is_args$args$slice_range;
-
-                include includes/defaultlocation;
-        }
-
- 	#Renegade X
-        server
-        {
-                server_name     cdn.renegade-x.com; 
-                listen          3129;
-		#They don't like slices
-		proxy_http_version	1.0;
-
-                include includes/defaultlocation;
-        }
-
-	#ET Legacy
-        server
-        {
-                server_name     wolffiles.de;
-                listen          3129;
-
-                location /filebase
-                {
-        	        include includes/slicing;
-	                proxy_cache_key $host$uri$is_args$args$slice_range;
-
-                        proxy_pass      http://$host$request_uri;
-                }
-		
-		include includes/defaultlocation_nocache;
-	}
-        server
-        {
-                server_name     mirror.etlegacy.com;
-                listen          3129;
-
-
-                location /omnibot
-                {
-                	include includes/slicing;
-                	proxy_cache_key $host$uri$is_args$args$slice_range;
-
-                        proxy_pass      http://$host$request_uri;
-                }
-
-		include includes/defaultlocation_nocache;
-
-        }
-
-
-        # Origin sends no-cache headers for no good reason
-	# Also includes some request params which break caching
-        server
-        {
-                server_name     *.cdn.ea.com;
-                listen          3129;
-
-                proxy_ignore_headers Cache-Control;
-
-		include		includes/slicing;
-                proxy_cache_key $host$uri$slice_range;
-        
-		include		includes/defaultlocation;        
-        }
-
-        server
-        {
-                proxy_cache     off;
-                listen          3130;
+	{
+		proxy_cache     off;
+		listen          3130;
 
 		location /nginx_status
-                {
-                        stub_status on;
-                }
-
-        }
+		{
+				stub_status on;
+		}
+	}
 
 	server
 	{
