--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,7 +20,7 @@ http
 
 
 	log_format nginx_cache '$upstream_cache_status: $remote_addr - $remote_user [$time_local] '
-				'"$request_method $host$request_uri" $status $body_bytes_sent';
+				'"$request_method $host$request_uri" $status $body_bytes_sent $http_range';
 
 	log_format full '$remote_addr - $remote_user [$time_local] '
                     '"$request_method $host$request_uri" $status $body_bytes_sent '
@@ -33,7 +33,7 @@ http
 	#tcp_nopush     on;
 	aio		on;
 
-	resolver 213.73.91.35 85.214.20.141 85.214.73.63 130.255.73.90; 
+	resolver 213.73.91.35 85.214.20.141 9.9.9.9; 
 
 	include sites/*;
 	
