em0: WAN-facing bridge interface em1: LAN-facing bridge interface em2: Any extra interfaces

--- a/pf.conf
+++ b/pf.conf
@@ -1,8 +1,7 @@
 
-int_if="em0"
-ext_if="re0"
+int_if="em1"
+ext_if="em0"
 
-rdr on $int_if inet proto tcp from any to any port www -> 127.0.0.1 port 3129
+rdr on $int_if inet proto tcp from !(em2) to any port www -> 127.0.0.1 port 3129
 
 pass in quick on $int_if route-to lo0 inet proto tcp from any to 127.0.0.1 port 3129 keep state
-
