easier to toggle logging for anything that's not cached in case CDNs change domains around again

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -50,6 +50,7 @@ http
 
 	server
 	{
+		proxy_cache 		off;
 		proxy_buffering		off;
 		proxy_request_buffering	off;
 
@@ -57,6 +58,9 @@ http
 		#access_log     /var/log/nginx/access.log-nocache full;
 		access_log      off;
 	
-		include includes/defaultlocation_nocache;	
+		location / 
+		{
+			proxy_pass      $scheme://$host$request_uri;		
+		}
 	}
 }	
