Prevent anything besides 200 (OK) and 206 (slives) from being cached

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,11 +10,12 @@ events
 http 
 {
 	proxy_cache_path /storagepool/cache use_temp_path=off keys_zone=steamcache:100m max_size=250g inactive=365d levels=1:2;
-    proxy_cache steamcache;
+	proxy_cache steamcache;
 	proxy_cache_revalidate on;
 	proxy_cache_lock on;
-    proxy_http_version 1.1;
-    proxy_cache_valid  200 206 100d;
+	proxy_http_version 1.1;
+	proxy_cache_valid  200 206 365d;
+	proxy_cache_valid  any 0s;
 	proxy_store_access user:rw group:r all:r;
 	proxy_max_temp_file_size 0;
 
@@ -32,6 +33,15 @@ http
 	sendfile        on;
 	#tcp_nopush     on;
 	aio		on;
+
+    	map $status $nocache
+	{
+        	200	0;
+		206	0;
+        	default 1;
+    	}
+	proxy_no_cache $nocache;
+
 
 	resolver 213.73.91.35 85.214.20.141 9.9.9.9; 
 
