Changed resolver to 9.9.9.9

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -43,7 +43,7 @@ http
 	proxy_no_cache $nocache;
 
 
-	resolver 213.73.91.35 85.214.20.141 9.9.9.9; 
+	resolver 9.9.9.9; 
 
 	include sites/*;
 	
@@ -74,3 +74,4 @@ http
 		}
 	}
 }	
+
